# kynee

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEX_HANDOVER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICAL_USE_POLICY.md  GOVERNANCE.md  HANDOVER.md  HANDOVER_WEEK2.md  LICENSE  NEXT_DEVELOPER_START_HERE.md  NOTICE  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  WEEK2_COMPLETE_HANDOVER.md  WEEK2_COMPLETION_REVIEW.md  WEEK2_HANDOVER.md
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_question.yml
.github/workflows/: ci.yml  security-scan.yml
agent/: .gitignore  README.md  pyproject.toml
agent/kynee_agent/: __init__.py
agent/kynee_agent/audit/: __init__.py  writer.py
agent/kynee_agent/cli/: __init__.py  main.py
agent/kynee_agent/core/: __init__.py  agent.py  coordinator.py  exceptions.py
agent/kynee_agent/models/: __init__.py  engagement.py  finding.py  inventory.py
agent/kynee_agent/policy/: __init__.py  engine.py
agent/tests/: __init__.py  conftest.py
agent/tests/unit/: __init__.py  test_agent.py  test_audit_log.py  test_coordinator.py  test_models.py  test_policy_engine.py
ai/: AI_CONTEXT.md  AI_HANDOVER.md  AI_RULES.md
ai-coders/: README.md  handover-chatgpt-codex.md  handover-chatgpt.md  handover-claude-haiku.md  handover-claude-opus.md  handover-claude-sonnet.md  handover-copilot.md  handover-gemini.md  handover-grok.md  handover-vscode.md
console/: README.md
console/backend/: .gitignore  pyproject.toml
console/backend/kynee_console_backend/: __init__.py  main.py
console/backend/kynee_console_backend/app/: __init__.py
console/backend/kynee_console_backend/core/: __init__.py
console/backend/kynee_console_backend/db/: __init__.py
console/backend/kynee_console_backend/models/: __init__.py
console/backend/kynee_console_backend/routers/: agents.py
console/backend/kynee_console_backend/schemas/: __init__.py  agent.py  finding.py
console/backend/tests/: test_app.py
console/frontend/: index.html  package.json
console/frontend/src/: App.css  App.tsx  index.css
console/frontend/src/services/: api.ts
console/frontend/src/types/: index.ts
docs/: DEVELOPMENT_GUIDE.md  FAQ.md  MCP_INTEGRATION_PLAN.md  WEEK2_IMPLEMENTATION_SUMMARY.md  ai-assistant.md  getting-started.md  security-model.md
docs/architecture/: adr-0000-index.md  adr-0001-agent-language.md  adr-0002-transport-design.md  adr-0002-transport.md  adr-0003-data-serialization.md  adr-0004-audit-log-immutability.md  adr-0004-audit-log-integrity.md  overview.md
docs/legal/: rules-of-engagement-template.md  scope-and-authorization.md
docs/ops/: branching-and-ai-collaboration.md
docs/tutorials/: first-engagement.md  flipper-integration.md  interpreting-findings.md
hardware/: bill-of-materials.md  compatibility-matrix.md
hardware/flipper/: integration-notes.md
schemas/: agent-status.schema.json  auditlog.schema.json  findings.schema.json  inventory.schema.json
validation-reports/: 2026-02-24-initial-validation.md  compliance-review-report.md  consistency-check-report.md  link-check-report.md  markdown-lint-report.md  roadmap-progress-report.md  schema-validation-results.md  security-scan-report.md  workflow-validation-report.md
validation-reports/raw/: agent-status.schema.json.compile.txt  auditlog.schema.json.compile.txt  compliance.txt  consistency.txt  dirs.txt  findings.schema.json.compile.txt  gitleaks.txt  inventory.schema.json.compile.txt  linkcheck.txt  markdownlint.txt  sample-validation.txt
validation-reports/samples/invalid/: agent-status-invalid-001.json  agent-status-invalid-002.json  agent-status-invalid-003.json  auditlog-invalid-001.json  auditlog-invalid-002.json  auditlog-invalid-003.json  finding-invalid-001.json  finding-invalid-002.json  finding-invalid-003.json  inventory-invalid-001.json  inventory-invalid-002.json  inventory-invalid-003.json
validation-reports/samples/valid/: agent-status-001.json  agent-status-002.json  agent-status-003.json  auditlog-001.json  auditlog-002.json  auditlog-003.json  finding-001.json  finding-002.json  finding-003.json  inventory-001.json  inventory-002.json  inventory-003.json
